--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,4 @@
 /* Typography */
-
-/* Body Styles */
-body {
-  font-family: 'Helvetica', Arial, sans-serif;
-  background-image: url("mich-agiliscc-mountain-road.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* Typography */
 html {
   font-family: 'Roboto', Helvetica, sans-serif;
   font-size: 16px;
@@ -16,8 +6,11 @@ html {
   color: #333;
 }
 
-html {
-  font-family: 'Helvetica', Arial, sans-serif;
+/* Body Styles */
+body {
+  background-image: url("../mich-agiliscc-mountain-road.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 /* Reset Styles */
@@ -35,7 +28,8 @@ body {
   color: #333;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: bold;
 }
 
@@ -146,6 +140,7 @@ p {
 .footer a:hover {
   border-bottom-color: transparent;
 }
+
 .approach-section {
   background-color: #f8f8f8;
   padding: 80px 0;
@@ -173,11 +168,3 @@ p {
   background-color: #007bff;
   color: #fff;
   font-size: 16px;
-  text-decoration: none;
-  border-radius: 4px;
-}
-
-.btn:hover {
-  background-color: #0056b3;
-}
-
