--- a/css/styles.css
+++ b/css/styles.css
@@ -11012,7 +11012,7 @@ textarea.form-control-lg {
   font-size: 4.5rem;
 }
 
-header.masthead {
+header.{
   position: relative;
   background-color: #343a40;
   background: url("../mich-agiliscc-mountain-road.jpg") no-repeat center center;
