--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1, h2, h3 {
 /* Hero Section */
 #home {
     position: relative;
-    background: url('GZDuzDVWAAAHE8b.jpg') no-repeat center center fixed;
+    background: url('8b.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
